--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -522,6 +522,7 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 .list_item_wrap .item_wrap .item_list .item .product_name {
 	font-size: 16px;
 	font-weight: 400;
+	text-align: center;
 }
 .list_item_wrap .item_wrap .item_list .m_btn {
 	width: 100%;
