--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -846,8 +846,8 @@ td.cart_main .product_box {
   left: 5px;
   width: 4px;
   height: 8px;
-  border-right: 4px solid var(--sub-color);
-  border-bottom: 4px solid var(--sub-color);
+  border-right: 4px solid var(--main-text);
+  border-bottom: 4px solid var(--main-text);
   border-radius: 2px;
   transform: rotate(45deg) scale(0);
   transition: all 0.3s ease;
