--- a/WebContent/lib/css/sub_2.css
+++ b/WebContent/lib/css/sub_2.css
@@ -251,7 +251,7 @@ p.pay_type span i {background:url(/images/sub_2/table_list_1.gif) no-repeat left
 	font-weight: 400;
 	text-align: center;
 	margin-bottom: 50px;
-	color: var(--sub-color);
+	color: var(--main-text);
 }
 .pay_history {
 	font-size: 14px;
