--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -1369,6 +1369,10 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	.comment_top p.ct_r { align-self: end; margin-bottom: 20px; }
 	
 	.pro_name {width:70px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+	
+	.user_table_1 td select.select_u1,
+	.user_table_1 td input.ws_2 { margin-bottom: 5px; }
+	select.select_1{ margin-top: 5px; }
 }
 
 
