--- a/WebContent/lib/css/common.css
+++ b/WebContent/lib/css/common.css
@@ -7,7 +7,7 @@
 
 input.input_1 {height:14px; padding:6px 0 6px 5px; border:1px solid #E5E5E5;}
 input.input_2 {height:14px; padding:2px 0 1px 5px; border:1px solid #E5E5E5;}
-input.input_3 {height:14px; padding: 8px 0 8px 8px; border:1px solid #E5E5E5;}
+input.input_3 { height:14px; padding: 8px 0 8px 8px; border:1px solid #E5E5E5;}
 input.check {width:13px; height:13px;}
 input.radio {width:13px; height:13px;}
 select.select_1 { width: 110px; height: 32px; border:1px solid #E5E5E5;}
@@ -1145,6 +1145,8 @@ ul.sub_list_1 li {color:#e85946; background:url(/images/sub_2/table_list_1.gif) 
 		flex-direction: column;
     	height: 260px;
 	}
+	
+	input.input_3 { width: 100%; }
 	
 	.product_btn { margin: 10px 0 0 0; }
 	.status_99 { background-position: -19px 0px; }
