--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -723,10 +723,19 @@ td.cart_main .product_box {
 	padding: 15px 5px; 
 	box-sizing: border-box; 
 }
-.sub_table_1 table th {font-size: 14px; font-weight: 400; text-align:left; padding:12px; background:#fafafa; border-bottom:1px solid #e3e3e3;}
+.sub_table_1 table th {
+	width: 25%;
+	font-size: 14px; 
+	font-weight: 400; 
+	text-align:left; 
+	padding:12px; 
+	background:#fafafa; 
+	border-bottom:1px solid #e3e3e3;
+}
 .sub_table_1 table th span { font-size: 14px; }
 .sub_table_1 table th p.btn_s5 {margin:5px 0 0 10px;}
 .sub_table_1 table td {
+	height: 45px;
 	font-size: 12px; 
 	font-weight: 300; 
 	padding:13px 18px 12px 16px; 
