--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -735,7 +735,7 @@ td.cart_main .product_box {
 .sub_table_1 table th span { font-size: 14px; }
 .sub_table_1 table th p.btn_s5 {margin:5px 0 0 10px;}
 .sub_table_1 table td {
-	height: 45px;
+	min-height: 45px;
 	font-size: 12px; 
 	font-weight: 300; 
 	padding:13px 18px 12px 16px; 
